# Phase-Conditioned-Trajectory

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: technical_report.md
examples/: README.md
results/phase_depth_filtering/: depth_trajectories.csv  stability_metrics.json
results/trajectory_comparison/: 00000_trajectories.csv  00001_trajectories.csv  00002_trajectories.csv  00003_trajectories.csv  00004_trajectories.csv  all_metrics.json
src/phase_conditioned_trajectory/: __init__.py  phase_depth_filter.py  track_hand_centroid.py  train_next_phase.py  trajectory_pipeline.py
