[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "phase-conditioned-trajectory"
version = "0.1.0"
description = "Phase-conditioned Kalman filtering for 2D/depth hand trajectories and next-phase prediction from assembly videos"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "mediapipe>=0.10",
    "numpy>=1.24",
    "torch>=2.0",
    "timm>=0.9",
    "filterpy>=1.4",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]
